# qtextras

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/corelib/: CMakeLists.txt  corelib_global.h  qtextrascore.cpp  qtextrascore.h
src/openai/: CMakeLists.txt  PROJECT_README.md  QUICKSTART.md  README.md  openai_global.h  qopenai.cpp  qopenai.h  qopenaibaseclient.cpp  qopenaibaseclient.h  qopenaichat.cpp  qopenaichat.h  qopenaiexceptions.h  qopenairesources.cpp  qopenairesources.h  qopenairesponse.cpp  qopenairesponse.h  qopenaitypes.h
src/openai/examples/: CMakeLists.txt  advanced_chat.cpp  embeddings_example.cpp  models_example.cpp  proxy_example.cpp  simple_chat.cpp
src/system/: CMakeLists.txt  qbatteryinfo.cpp  qbatteryinfo.h  qbatteryinfo_p.h  qbatteryinfo_platform_p.h  qbatteryinfo_platform_win_p.cpp  qbatteryinfo_platform_win_p.h  qbatteryinfo_win.cpp  system.cmake  system.h  system_global.h
tests/: CMakeLists.txt
tests/benchmarks/: CMakeLists.txt
tests/benchmarks/system/: CMakeLists.txt
tests/benchmarks/system/qbatteryinfo/: CMakeLists.txt  tst_qbatteryinfo.cpp
